# Realm

./: .gitignore  CMakeLists.txt  Dockerfile  Protocol.md  Readme.md  main.cpp  supervisord.conf  worker.cpp
.github/workflows/: ci.yml
src/: CMakeLists.txt  client.cpp  main.cpp  message.cpp  protocol.cpp  router.cpp  server.cpp  session.cpp  state.cpp  worker.cpp
src/include/: client.h  constants.h  foreach.h  message.h  message_queue.h  protocol.h  protocol_response.h  router.h  server.h  session.h  state.h  worker.h
src/source/: server.cpp  session.cpp  state.cpp
state/: CMakeLists.txt  Dockerfile  main.cpp
state/src/: server.cpp
state/src/include/: server.h  session.h
tests/: protocol_test.cc  router_test.cc
